# study-projects

./: .gitignore
AfterEffects/project_01/: project_01.aep  twitter_logo.ai
AfterEffects/project_01/Logs de project_01.aep/: AE 05-06-2022 03-17-38.txt
AfterEffects/project_01/Salvamento automático do Adobe After Effects/: project_01 salvamento automático 1.aep  (+8 more)
C#/AprendendoCSharp/: AprendendoCSharp.sln
C/adivinhacao/: adivinhacao.c  multiplyVariables.c  teste.c
C/foge-foge/: main.c
C/forca/: forca.c  forca.h  main.c  palavras.txt  potencia.c  soma.c
Javascript/01-fundamentos-reactjs/: index.html  package-lock.json  package.json
Javascript/01-fundamentos-reactjs-ts/: index.html  package-lock.json  package.json
Javascript/03-dt-money/: package-lock.json  package.json  server.json
Javascript/ignews/: package.json  sm.json
Javascript/tiktik_app/: .env.development  next.config.js  package-lock.json  package.json  types.d.ts
Javascript/todo/: package-lock.json
NodeJS/FINAPI/: package.json
NodeJS/fundamentos-nodejs/: package.json
Python/: finalProject.rar  hello.py
Python/Others/speech_recognition/: get-poetry  pyproject.toml
Python/Others/speech_recognition/speech_recogn/: __init__.py
Python/api_1/: main.py
Python/course_1/: main.py  pyproject.toml
Python/fproject/: products  productsSpy.py
Python/jogos/: adivinhacao.py  forca.py  jogos.py  palavras.txt
Python/readExcel/: file.xlsx  file2.xlsx  main.py  products  products_with_categories.json
React Native [experiments]/windows&macAPP/: App.tsx  app.json  msbuild.binlog  package.json
(+209 files in other folders)
